adding grid logic

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <body>
     <h1>Etch-a-sketch</h1>
     <div class="main-container"></div>
+    <div class="controls-container">
+        <div class="slidecontainer">
+            <input type="range" min="8" max="100" value="32" class="slider" step="4">
+        </div>
+    </div>
 </body>
 
 </html>
