--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Etch-a-sketch</h1>
     <div class="main-container"></div>
     <div class="controls-container">
-        <div class="slidecontainer">
+        <div class="slide-container">
             <input type="range" min="8" max="100" value="32" class="slider" step="4">
         </div>
     </div>
