--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="main-container"></div>
     <div class="controls-container">
         <div class="slide-container">
-            <input type="range" min="8" max="100" value="32" class="slider" step="4">
+            <input type="range" class="slider" min="8" max="100" value="32" step="4">
         </div>
     </div>
 </body>
