--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h1>Etch-a-sketch</h1>
     <div class="main-container"></div>
     <div class="controls-container">
-        <div class="slide-container">
-            <input type="range" class="slider" min="8" max="100" value="32" step="4">
-        </div>
+        <span>Dimension: </span>
+        <input type="range" class="slider" min="8" max="100" value="32" step="4">
+    </div>
     </div>
 </body>
 
