--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Etch-a-sketch</h1>
     <div class="main-container"></div>
     <div class="controls-container">
-        <span>Dimension: </span>
+        <p>Dimension: </p>
         <input type="range" class="slider" min="8" max="100" value="32" step="4">
     </div>
     </div>
